<resources>
    <string name="app_name">FishBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="species_name">Species</string>
    <string name="lake_hint">Lake</string>
    <string name="lake_name">Lake</string>
    <string name="species_hint">Species</string>
    <string name="county_hint">County</string>
    <string name="length_hint">Length (inches)</string>
    <string name="weight_hint">Weight (lbs)</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_to_login">click to login</string>
    <string name="login">login</string>
    <string name="click_to_register">click to register</string>
    <string name="lure_hint">Lure</string>
    <string name="time_hint">Time</string>
    <string name="location_hint">Location</string>
    <string name="remember_login">Remember Login</string>
    <string name="delete">DELETE</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="lat_hint">Latitude</string>
    <string name="long_hint">Longitude</string>
    <string name="update">Update</string>
    <string name="new_species_caught">New Species Caught!</string>
    <string name="personal_best_label">Personal Best:</string>
    <string name="PersonalBest">Length: %1$s inches, Weight: %2$s pounds</string>
    <string name="save_marker_loc">SAVE</string>
    <string name="habitat_Label">Habitat</string>
    <string name="bait_label">Bait</string>

</resources>