<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fish_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:background="@color/black"/>

        <LinearLayout
            android:id="@+id/image_buttons_layout"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_camera"/>

            <ImageButton
                android:id="@+id/select_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:src="@drawable/baseline_upload_24"/>

        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/species_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_buttons_layout"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/species_hint"
            android:inputType="text" />

        <AutoCompleteTextView
            android:id="@+id/county_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/county_hint"
            android:inputType="text"/>

        <AutoCompleteTextView
            android:id="@+id/lake_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/species_edit_text"
            android:layout_marginTop="11dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/lake_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/lure_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:hint="@string/lure_hint"
            android:inputType="text" />

        <GridLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3">

            <EditText
                android:id="@+id/lat_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_columnWeight="1"
                android:hint="@string/lat_hint"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/long_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_columnWeight="1"
                android:hint="@string/long_hint"
                android:inputType="numberDecimal"/>

            <ImageButton
                android:id="@+id/location_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:src="@drawable/baseline_my_location_24"/>
        </GridLayout>


        <GridLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

        <EditText
            android:id="@+id/length_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_columnWeight="1"
            android:hint="@string/length_hint"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_columnWeight="1"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"/>


        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/upload"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
