<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fish_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:background="@color/black"/>


        <AutoCompleteTextView
            android:id="@+id/species_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/species_hint"
            android:inputType="text" />


        <EditText
            android:id="@+id/lure_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:hint="@string/lure_hint"
            android:inputType="text" />




        <GridLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

        <EditText
            android:id="@+id/length_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_columnWeight="1"
            android:hint="@string/length_hint"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_columnWeight="1"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"/>


        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/update"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
